--- a/Crypto_Clustering.ipynb
+++ b/Crypto_Clustering.ipynb
@@ -1028,7 +1028,7 @@
     "\n",
     "**Question:** What is the best value for `k`?\n",
     "\n",
-    "**Answer:** Inertia is decreasing to begin to plataeu at k=4, this is the most significant drop observed and inertia continues to dwindle minimmally after k=7. The best value for k in this given scenario k would be k=4 since it represents a trade off between cluster sizes and simplicity as inertia doesn't continue decreasing by a large enough margin to warrant more clusters later. "
+    "**Answer:** Inertia is decreasing to begin to plateau at k=4, this is the most significant drop observed and inertia continues to dwindle minimally after k=7. The best value for k in this given scenario k would be k=4 since it represents a trade off between cluster sizes and simplicity as inertia doesn't continue decreasing by a large enough margin to warrant more clusters later. "
    ]
   },
   {
@@ -2484,12 +2484,12 @@
     "\n",
     "* **Question:** What is the best value for `k` when using the PCA data?\n",
     "\n",
-    "  * **Answer:** The PCA data supports the K value fo 4 as that is the sharpest change.\n",
+    "  * **Answer:** The PCA data supports the K value of 4 as that is the sharpest change.\n",
     "\n",
     "\n",
     "* **Question:** Does it differ from the best k value found using the original data?\n",
     "\n",
-    "  * **Answer:** No, both data points support a k value of 4 and mirror the same dwindeling pattern after 7."
+    "  * **Answer:** No, both data points support a k value of 4 and mirror the same dwindling pattern after 7."
    ]
   },
   {
@@ -3654,7 +3654,7 @@
     "\n",
     "  * **Question:** After visually analyzing the cluster analysis results, what is the impact of using fewer features to cluster the data using K-Means?\n",
     "\n",
-    "  * **Answer:** Using PCA results in a more condensed area of clusters while also highlighting outliers despite having the same amount of clusters in the orginal data. This can also mean that some nuanced information in the original dataset was lost in the transformation to PCA. Overall PCA is the preffered method in this analysis as it is structured more clearly and displays less noise giving a more abstract comparison. "
+    "  * **Answer:** Using PCA results in a more condensed area of clusters while also highlighting outliers despite having the same amount of clusters in the original data. This can also mean that some nuanced information in the original dataset was lost in the transformation to PCA. Overall PCA is the preferred method in this analysis as it is structured more clearly and displays less noise giving a more abstract comparison. "
    ]
   }
  ],
